--- a/plugins/qnode/tools/mocknode/pages/front.html
+++ b/plugins/qnode/tools/mocknode/pages/front.html
@@ -11,14 +11,14 @@
         <link rel="stylesheet" type="text/css" href="/static/front.css">
         <script type="text/javascript" src="/static/front.js"></script>
 </head>
-<body onload="refreshAccount()">
+<body onload="onLoad()">
 <table>
     <tr>
         <td class="just_text">Your account:</td>
         <td id="account"></td>
     </tr>
     <tr>
-        <td class="just_text">Balance:</td>
+        <td class="just_text">Your balance:</td>
         <td id="balance"></td>
     </tr>
 </table>
