--- a/plugins/qnode/tools/mocknode/sendmsg.html
+++ b/plugins/qnode/tools/mocknode/sendmsg.html
@@ -29,17 +29,17 @@
     }
     function bet1000() {
         var xhttp = new XMLHttpRequest();
-        xhttp.open("GET", "/lottery/bet?sum=1000", true);
+        xhttp.open("GET", "/testbet?sum=1000", true);
         xhttp.send();
     }
     function bet10000() {
         var xhttp = new XMLHttpRequest();
-        xhttp.open("GET", "/lottery/bet?sum=10000", true);
+        xhttp.open("GET", "/testbet?sum=10000", true);
         xhttp.send();
     }
     function lockBets() {
         var xhttp = new XMLHttpRequest();
-        xhttp.open("GET", "/lottery/lock", true);
+        xhttp.open("GET", "/testlock", true);
         xhttp.send();
     }
 </script>
