--- a/plugins/qnode/tools/mocknode/pages/front.html
+++ b/plugins/qnode/tools/mocknode/pages/front.html
@@ -22,5 +22,15 @@
         <td id="balance"></td>
     </tr>
 </table>
+
+<button type="button" onclick="placeBet(1000, 3)">Place bet 10000</button>
+
+<h3> All balances</h3>
+<div style="display: table" id="all_accounts_table">
+</div>
+<h3> All bets</h3>
+<div style="display: table" id="all_bets_table">
+</div>
+
 </body>
 </html>
