--- a/plugins/qnode/tools/mocknode/pages/game.html
+++ b/plugins/qnode/tools/mocknode/pages/game.html
@@ -59,6 +59,15 @@
         <td><button type="button" onclick="placeBet(100000000, 5)" class="color_5_butt">100 Mi</button></td>
         <td><button type="button" onclick="placeBet(100000000, 6)" class="color_6_butt">100 Mi</button></td>
     </tr>
+    <tr>
+        <td class="bold_text_center" id="num_bets_0"></td>
+        <td class="bold_text_center" id="num_bets_1"></td>
+        <td class="bold_text_center" id="num_bets_2"></td>
+        <td class="bold_text_center" id="num_bets_3"></td>
+        <td class="bold_text_center" id="num_bets_4"></td>
+        <td class="bold_text_center" id="num_bets_5"></td>
+        <td class="bold_text_center" id="num_bets_6"></td>
+    </tr>
 </table>
 <p id="last_err"></p>
 <h3>Smart contract state</h3>
